--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "babel-loader": "^8.2.3",
     "css-loader": "^6.6.0",
     "html-webpack-plugin": "^5.5.0",
+    "sass": "^1.49.7",
+    "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
     "typescript": "^4.5.5",
     "webpack": "^5.69.0",
