--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
     "@types/estree": "^0.0.51",
     "@types/node": "^17.0.18",
     "@types/react": "^17.0.39",
@@ -29,6 +30,7 @@
     "babel-loader": "^8.2.3",
     "css-loader": "^6.6.0",
     "html-webpack-plugin": "^5.5.0",
+    "react-refresh": "^0.11.0",
     "sass": "^1.49.7",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
