--- a/.babelrc
+++ b/.babelrc
@@ -4,7 +4,10 @@
     [
       "@babel/preset-react",
       {
-        "runtime": "automatic"
+        "runtime": "automatic",
+        "targets": {
+          "node": "current"
+        }
       }
     ],
     "@babel/preset-typescript"
