--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --config webpack/webpack.config.js --env env=dev",
-    "build": "webpack --config webpack/webpack.config.js --env env=prod",
+    "build": "webpack --config webpack/webpack.config.js --env env=prod --mode production --json build/webpack-stats.json",
     "server": "npx serve ./build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint --fix --color --cache \"./src/**/*.{js,jsx,ts,tsx,json}\"",
@@ -46,11 +46,13 @@
     "html-webpack-plugin": "~5.5.0",
     "husky": "4",
     "lint-staged": "~12.3.4",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
     "prettier": "~2.5.1",
     "react-refresh": "~0.11.0",
     "sass": "~1.49.7",
     "sass-loader": "~12.6.0",
     "style-loader": "~3.3.1",
+    "terser-webpack-plugin": "^5.3.1",
     "typescript": "~4.5.5",
     "webpack": "~5.69.0",
     "webpack-bundle-analyzer": "~4.5.0",
