--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --config webpack/webpack.config.js --env env=dev",
     "build": "webpack --config webpack/webpack.config.js --env env=prod --mode production --json build/webpack-stats.json",
-    "server": "npx serve ./build",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "format": "prettier --write --config ./.prettierrc.js \"./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
+    "format:ci": "prettier --check --config ./.prettierrc.js \"./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
     "lint": "eslint --fix --color --cache \"./src/**/*.{js,jsx,ts,tsx,json}\"",
     "lint:ci": "eslint \"./src/**/*.{js,jsx,ts,tsx,json}\"",
-    "format": "prettier --write --config ./.prettierrc.js \"./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
-    "format:ci": "prettier --check --config ./.prettierrc.js \"./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\""
+    "start": "webpack serve --config webpack/webpack.config.js --env env=dev",
+    "server": "npx serve ./build",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -28,6 +28,8 @@
     "@babel/preset-typescript": "~7.16.7",
     "@babel/runtime": "~7.17.2",
     "@pmmmwh/react-refresh-webpack-plugin": "~0.5.4",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "12.1.2",
     "@types/estree": "~0.0.51",
     "@types/node": "~17.0.18",
     "@types/react": "~18.0.2",
@@ -45,6 +47,7 @@
     "eslint-plugin-react-hooks": "~4.3.0",
     "html-webpack-plugin": "~5.5.0",
     "husky": "4",
+    "jest": "^27.5.1",
     "lint-staged": "~12.3.4",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
     "prettier": "~2.5.1",
@@ -53,6 +56,7 @@
     "sass-loader": "~12.6.0",
     "style-loader": "~3.3.1",
     "terser-webpack-plugin": "^5.3.1",
+    "ts-jest": "^27.1.4",
     "typescript": "~4.5.5",
     "webpack": "~5.69.0",
     "webpack-bundle-analyzer": "~4.5.0",
